--- a/app/assets/stylesheets/static_pages.css
+++ b/app/assets/stylesheets/static_pages.css
@@ -7,15 +7,9 @@ a {
 .responses {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
     width: 100%;
-    border-collapse: collapse;
+
 }
 
-.responses td, .responses th {
-    font-size: 1em;
-    border: 1px solid black;
-    padding: 3px 7px 2px 7px;
-    text-align: left;
-}
 .responses th {
     font-size: 1.1em;
     text-align: left;
@@ -23,4 +17,11 @@ a {
     padding-bottom: 4px;
     background-color: #333399;
     color: #ffffff;
+}
+
+.responses td, .responses th {
+    border: 0px;
+    font-size: 1em;
+    padding: 3px 7px 2px 7px;
+    text-align: left;
 }
