Add production gems and better errors

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -31,7 +31,7 @@
       <td><%=link_to business.name, business.url%></td>
       <td><%=image_tag business.rating_img_url_small%></td>
       <td><%=business.review_count%></td>
-      <td><%=business.location.display_address%></td>
+      <td><%=business.location.address%></td>
     </tr>
   <% end %> 
   </table>
